Fixed X-axis Overflow Problem
  <div className='overflow-auto'>

--- a/epk-website/styles/globals.css
+++ b/epk-website/styles/globals.css
@@ -6,3 +6,13 @@
 .spotify {
   border-radius: 12px;
 }
+
+@media screen and (max-width: 667px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+}
